kubernetes/zchannel/etcd-zchannel.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: zchannel
spec:
  ports:
  - name: http
    port: 4001
  selector:
    app: etcd
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: etcd
  name: etcd
  namespace: zchannel
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - image: registry.yourdomain.com/common/etcd:2.2.1
        name: etcd
        command:
        - etcd
        args:
        - --listen-client-urls
        - "http://0.0.0.0:4001"
        - --advertise-client-urls
        - "http://127.0.0.1:4001"
        ports:
        - containerPort: 4001
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/localtime
          name: time
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 2500m
            memory: 2500Mi
      volumes:
      - hostPath:
           path: /etc/localtime
        name: time
