kubernetes/zchannel/redis-zchannel.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: zchannel
spec:
  ports:
  - name: http
    port: 6379 
  selector:
    app: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: zchannel
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: registry.yourdomain.com/common/redis
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/localtime
          name: time
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 2500m
            memory: 2500Mi
      volumes:
      - hostPath:
           path: /etc/localtime
        name: time
